--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,2 @@
-amqp==5.2.0
-billiard==4.2.0
-blinker==1.8.2
-bottle==0.13.1
-camelot-py==0.9.0
-celery==5.4.0
-certifi==2024.7.4
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.2
-click==8.1.7
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-colorama==0.4.6
-configparser==7.0.0
-cryptography==42.0.8
-et-xmlfile==1.1.0
-excalibur-py==0.4.3
-Flask==3.0.3
-Flask-SQLAlchemy==3.1.1
-frida==16.5.5
-frida-tools==13.3.0
-greenlet==3.0.3
-gunicorn==23.0.0
-idna==3.7
-itsdangerous==2.2.0
-Jinja2==3.1.4
-kombu==5.3.7
-MarkupSafe==2.1.5
-numpy==2.0.0
-opencv-python==4.10.0.84
-openpyxl==3.1.5
-packaging==24.1
-pandas==2.2.2
-pdfminer.six==20240706
-prompt_toolkit==3.0.47
-psutil==6.0.0
-psycopg2-binary==2.9.10
-pycparser==2.22
-Pygments==2.18.0
-PyPDF2==3.0.1
-python-dateutil==2.9.0.post0
-pytz==2024.1
-requests==2.32.3
-scapy==2.6.1
-setuptools==70.3.0
-six==1.16.0
-SQLAlchemy==2.0.31
-termcolor==2.4.0
-tqdm==4.66.4
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
-vine==5.1.0
-wcwidth==0.2.13
-websockets==13.1
-Werkzeug==3.0.3
+Flask
+gunicorn
